Fix button color in dark mode

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -1,6 +1,7 @@
 button {
 	cursor: pointer;
 	width: 100%;
+	color: var(--text-normal);
 	background-color: var(--background-primary);
 	border-radius: 4px;
 	box-shadow: 0 0 0 1px var(--background-modifier-border);
